[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scene/WalkSceneTemplate1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/SceneResource/TileSetGround1.tres" type="TileSet" id=2]
[ext_resource path="res://Scene/Trigger/ChangeSceneFromTrigger.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Trigger/ChangeSceneToTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Trigger/NPCTrigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/SceneResource/TileSetConstruction1.tres" type="TileSet" id=6]
[ext_resource path="res://Scene/SceneResource/TileSetCollision1.tres" type="TileSet" id=7]
[ext_resource path="res://Scene/Trigger/NPCArticleTrigger.tscn" type="PackedScene" id=8]
[ext_resource path="res://Script/Scene/Scene1Home.gd" type="Script" id=9]
[ext_resource path="res://Scene/Collision/DoorCollision.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scene/Trigger/NPCTriggerBG.tscn" type="PackedScene" id=11]

[node name="Scene1Home" instance=ExtResource( 1 )]
script = ExtResource( 9 )

[node name="tileMapGround" parent="." index="0"]
tile_set = ExtResource( 2 )
tile_data = PoolIntArray( -196609, 6, 0, -262144, 6, 0, -131074, 6, 0, -131073, 15, 0, -196608, 15, 0, -196607, 21, 0, -65539, 6, 0, -65538, 15, 0, -65537, 12, 0, -131072, 15, 0, -131071, 15, 0, -131070, 6, 0, -4, 6, 0, -3, 6, 0, -2, 15, 0, -1, 15, 0, -65536, 15, 0, -65535, 15, 0, -65534, 6, 0, -65533, 6, 0, 65533, 21, 0, 65534, 7, 0, 65535, 15, 0, 0, 15, 0, 1, 15, 0, 2, 15, 0, 3, 0, 0, 131069, 6, 0, 131070, 6, 0, 131071, 6, 0, 65536, 21, 0, 65537, 6, 0, 65538, 6, 0 )

[node name="changeSceneFromTriggerA" parent="node2DChangeSceneTrigger" index="0" instance=ExtResource( 3 )]
position = Vector2( 210, 32 )
changeToSceneTypeID = 2
changeToChangeSceneToTriggerTypeID = 3

[node name="changeSceneToTrigger1" parent="node2DChangeSceneTrigger" index="1" instance=ExtResource( 4 )]
position = Vector2( 90, 32 )
changeSceneToTriggerTypeID = 1

[node name="nPCArticleTriggerBag" parent="node2DNPCArticleTrigger" index="0" instance=ExtResource( 8 )]
position = Vector2( -96, 32 )
nPCArticleTriggerTypeID = 1

[node name="nPCArticleTriggerJournalRecordBook" parent="node2DNPCArticleTrigger" index="1" instance=ExtResource( 8 )]
position = Vector2( -32, -145 )
nPCArticleTriggerTypeID = 2

[node name="nPCArticleTriggerDoor" parent="node2DNPCArticleTrigger" index="2" instance=ExtResource( 8 )]
position = Vector2( 160, 32 )
nPCArticleTriggerTypeID = 3

[node name="doorCollision" parent="node2DNPCArticleTrigger/nPCArticleTriggerDoor" index="2" instance=ExtResource( 10 )]

[node name="nPCTrigger1" parent="node2DNPCTrigger" index="0" instance=ExtResource( 5 )]
position = Vector2( 96, -70 )
nPCTriggerTypeID = 1

[node name="nPCTriggerBG" parent="node2DNPCTrigger/nPCTrigger1" index="2" instance=ExtResource( 11 )]

[node name="tileMapConstruction" parent="." index="8"]
tile_set = ExtResource( 6 )
tile_data = PoolIntArray( -262143, 2, 0, -262142, 2, 0, -196606, 2, 0, 65532, 2, 0, 131072, 2, 0 )

[node name="tileMapCollision" parent="." index="9"]
tile_set = ExtResource( 7 )
tile_data = PoolIntArray( -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -131075, 0, 0, -131074, 0, 0, -196607, 0, 0, -196606, 0, 0, -65539, 0, 0, -131070, 0, 0, -3, 0, 0, -65534, 0, 0, 65533, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0 )
